# pro-recsys-movierecommendation-recsys-04

./: .gitignore  baseline_code  ensemble_lab.ipynb  pyproject.toml  static_ensembles.py
.github/: pull_request_template.md
data_explorer/: README.md  app.py  loader.py  requirements.txt  utils.py
eda/: 1_RatingLog.ipynb  2_Movie.ipynb  3_MovieDF_tmp.ipynb  ensemble_lab.ipynb  jiho.ipynb  readme.md
ensemble/: ensemble_lab.ipynb  reasonable_ensemble.py  sideInfo_ease_bert.py
lightning/: predict_bert4rec.py  predict_multi_vae.py  predict_rec_vae.py  run_bert4rec.sh  run_multi_vae.sh  train_autoencoder.py  train_bert4rec.py  train_mnist_vae.py  train_multi_vae.py
lightning/configs/: autoencoder.yaml  bert4rec.yaml  bert4rec_v2.yaml  mnist_vae.yaml  multi_vae.yaml  multi_vae_v2.yaml
lightning/docs/: CHANGELOG.md  CHECKPOINT_STRUCTURE.md  PREDICT_BERT4REC_VARIABLE_ANALYSIS.md  README_autoencoder.md  README_bert4rec.md  README_lightning.md  README_mnist_vae.md  README_multi_vae.md  VAE_MultiVAE_QnA.md
lightning/notebooks/: check_future_information_leakage.ipynb  ex.ipynb  visualize_autoencoder.ipynb  visualize_mnist_vae.ipynb  visualize_multi_vae.ipynb
lightning/scripts/: archive_old_experiments.sh  clear_tensorboard_cache.sh  start_tensorboard.sh
lightning/tests/: conftest.py
lightning/tune/: README.md  bert4rec_medium.db  bert4rec_test.db  quick_tune.py  tune_bert4rec_optuna.py  tune_bert4rec_optuna_monitored.py
recbole/: README.md  config.yaml  csv_to_inter.py  recbole_submit.py  run_recbole.py  submission_ease.csv  submission_ease1csv
(+98 files in other folders)
